fix(NavBar): flicker when changing order

--- a/src/index.css
+++ b/src/index.css
@@ -157,8 +157,7 @@ p > a:hover,
 /* Menu */
 
 .navbar .ui.secondary.menu .fitted.item:first-child {
-  padding: 0;
-  padding-right: 0.92857143em;
+  padding: 0 0.92857143em 0 0;
 }
 
 .navbar .ui.secondary.menu {
